@@ -1,37 +1,83 @@
-{
-    IBClasses = (
-        {CLASS = NSSegmentedControl; LANGUAGE = ObjC; SUPERCLASS = NSControl; }, 
-        {
-            ACTIONS = {closeWindow = id; connectURL = id; settingChanged = id; }; 
-            CLASS = PreferencePanel; 
-            LANGUAGE = ObjC; 
-            OUTLETS = {
-                checkTestRelease = NSButton; 
-                checkUpdate = NSButton; 
-                cmdSelection = NSButton; 
-                cursorType = id; 
-                enableBonjour = NSButton; 
-                enableGrowl = NSButton; 
-                focusFollowsMouse = NSButton; 
-                hideScrollbar = NSButton; 
-                hideTab = NSButton; 
-                maxVertically = NSButton; 
-                middleButtonPastesFromClipboard = NSButton; 
-                openBookmark = NSButton; 
-                promptOnClose = NSButton; 
-                quitWhenAllWindowsClosed = NSButton; 
-                refreshRate = NSSlider; 
-                selectionCopiesText = NSButton; 
-                tabPosition = NSPopUpButton; 
-                urlHandlerOutline = NSOutlineView; 
-                urlTable = NSTableView; 
-                useBorder = NSButton; 
-                useCompactLabel = NSButton; 
-                windowStyle = NSPopUpButton; 
-                wordChars = NSTextField; 
-            }; 
-            SUPERCLASS = NSWindowController; 
-        }
-    ); 
-    IBVersion = 1; 
-}
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<plist version="1.0">
+<dict>
+	<key>IBClasses</key>
+	<array>
+		<dict>
+			<key>CLASS</key>
+			<string>NSObject</string>
+			<key>LANGUAGE</key>
+			<string>ObjC</string>
+		</dict>
+		<dict>
+			<key>ACTIONS</key>
+			<dict>
+				<key>closeWindow</key>
+				<string>id</string>
+				<key>connectURL</key>
+				<string>id</string>
+				<key>settingChanged</key>
+				<string>id</string>
+			</dict>
+			<key>CLASS</key>
+			<string>PreferencePanel</string>
+			<key>LANGUAGE</key>
+			<string>ObjC</string>
+			<key>OUTLETS</key>
+			<dict>
+				<key>checkTestRelease</key>
+				<string>NSButton</string>
+				<key>checkUpdate</key>
+				<string>NSButton</string>
+				<key>cmdSelection</key>
+				<string>NSButton</string>
+				<key>cursorType</key>
+				<string>NSMatrix</string>
+				<key>enableBonjour</key>
+				<string>NSButton</string>
+				<key>enableGrowl</key>
+				<string>NSButton</string>
+				<key>focusFollowsMouse</key>
+				<string>NSButton</string>
+				<key>hideScrollbar</key>
+				<string>NSButton</string>
+				<key>hideTab</key>
+				<string>id</string>
+				<key>maxVertically</key>
+				<string>NSButton</string>
+				<key>middleButtonPastesFromClipboard</key>
+				<string>NSButton</string>
+				<key>openBookmark</key>
+				<string>NSButton</string>
+				<key>promptOnClose</key>
+				<string>id</string>
+				<key>quitWhenAllWindowsClosed</key>
+				<string>NSButton</string>
+				<key>refreshRate</key>
+				<string>NSSlider</string>
+				<key>selectionCopiesText</key>
+				<string>NSButton</string>
+				<key>tabPosition</key>
+				<string>NSPopUpButton</string>
+				<key>urlHandlerOutline</key>
+				<string>NSOutlineView</string>
+				<key>urlTable</key>
+				<string>NSTableView</string>
+				<key>useBorder</key>
+				<string>NSButton</string>
+				<key>useCompactLabel</key>
+				<string>NSButton</string>
+				<key>windowStyle</key>
+				<string>NSPopUpButton</string>
+				<key>wordChars</key>
+				<string>NSTextField</string>
+			</dict>
+			<key>SUPERCLASS</key>
+			<string>NSWindowController</string>
+		</dict>
+	</array>
+	<key>IBVersion</key>
+	<string>1</string>
+</dict>
+</plist>
